--- a/style.css
+++ b/style.css
@@ -6,3 +6,25 @@ body {
 	height: 100vh;
 	width: 100%;
 }
+
+.formBlock {
+	max-width: 300px;
+	background-color: #fff;
+	border: 1px solid #ddd;
+	position: absolute;
+	bottom: 50%;
+	right: 10px;
+	padding: 10px;
+	z-index: 999;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
+	border-radius: 5px;
+	width: 100%;
+}
+
+.leaflet-top .leaflet-control {
+	margin-top: 180px;
+}
+
+input:nth-child(1) {
+	margin-bottom: 10px;
+}
