--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
 body {
 	margin: 0;
 }
@@ -7,7 +9,7 @@ body {
 	width: 100%;
 }
 
-.formBlock {
+.form-block {
 	max-width: 300px;
 	background-color: #fff;
 	border: 1px solid #ddd;
@@ -21,10 +23,86 @@ body {
 	width: 100%;
 }
 
+.select-title {
+	font-size: 17px;
+}
+
+.select-subtitle {
+	margin-top: 0;
+	margin-bottom: 15px;
+	color: #a8a8a8;
+	font-size: 13px;
+}
+
+.jeep-form {
+	max-width: 300px;
+	background-color: #fff;
+	border: 1px solid #ddd;
+	position: absolute;
+	top: 10%;
+	left: 10px;
+	padding: 5px;
+	z-index: 999;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
+	border-radius: 2.5px;
+	width: 100%;
+	text-align: center;
+	font-family: "Roboto";
+}
+
+.jeep-select {
+	background-color: #bfd6c4;
+	height: 200px;
+	border-color: #46ff6f;
+	border-style: solid;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+.jeep-img {
+	width: 30px;
+	float: right;
+	margin: 7px 10px;
+}
+
+.first-route {
+	background-color: #e70000;
+	width: 100%;
+	height: 30px;
+	border-radius: 5px;
+	margin: 20px 0px 20px;
+}
+
+.hoverable:hover {
+	transform: scale(1.05);
+}
+
+.second-route {
+	background-color: #0066ff;
+	width: 100%;
+	height: 30px;
+	border-radius: 5px;
+	margin: 20px 0px 20px;
+}
+
+.third-route {
+	background-color: #ebff00;
+	width: 100%;
+	height: 30px;
+	border-radius: 5px;
+	margin: 20px 0px 20px;
+}
+
 .leaflet-top .leaflet-control {
 	margin-top: 180px;
 }
 
 input:nth-child(1) {
 	margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+	.jeep-form {
+		max-width: 200px;
+	}
 }
