--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
 	border-radius: 5px;
 	width: 100%;
+	font-family: "Roboto";
 }
 
 .select-title {
@@ -101,8 +102,17 @@ input:nth-child(1) {
 	margin-bottom: 10px;
 }
 
+.detail {
+	display: block;
+	margin: 5px;
+}
+
 @media only screen and (max-width: 600px) {
 	.jeep-form {
+		max-width: 200px;
+	}
+
+	.form-block {
 		max-width: 200px;
 	}
 }
