--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ button.right {
 	background-color: #fff;
 	border: 1px solid #ddd;
 	position: absolute;
-	bottom: 10%;
+	bottom: 40%;
 	right: 10px;
 	padding: 10px;
 	z-index: 998;
@@ -192,6 +192,14 @@ button.right {
 
 .third-route {
 	background-color: #ebff00;
+	width: 100%;
+	height: 30px;
+	border-radius: 5px;
+	margin: 20px 0px 20px;
+}
+
+.fourth-route {
+	background-color: #0dc135;
 	width: 100%;
 	height: 30px;
 	border-radius: 5px;
