--- a/style.css
+++ b/style.css
@@ -223,6 +223,59 @@ input:nth-child(1) {
 	margin: 20px 5px;
 }
 
+input[type="checkbox"] {
+	height: 0;
+	width: 0;
+	visibility: hidden;
+	margin: 5px;
+}
+
+label {
+	cursor: pointer;
+	text-indent: -9999px;
+	width: 50px;
+	height: 25px;
+	background: grey;
+	display: block;
+	border-radius: 100px;
+	position: relative;
+}
+
+label:after {
+	content: "";
+	position: absolute;
+	top: 2.5px;
+	left: 4px;
+	width: 19.5px;
+	height: 19.5px;
+	background: #fff;
+	border-radius: 90px;
+	transition: 0.3s;
+}
+
+input:checked + label {
+	background: #bada55;
+}
+
+input:checked + label:after {
+	left: calc(100% - 5px);
+	transform: translateX(-100%);
+}
+
+label:active:after {
+	width: 30px;
+}
+
+.toggle-class {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.special-text {
+	margin-left: 10px;
+}
+
 @media only screen and (max-width: 992px) {
 	.jeep-form {
 		width: 150px;
